Fix spacing between "add new" and first blog post

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1142,7 +1142,15 @@ body {
 
 .blog-header {
   position: relative;
+  min-height: 46px;
   margin-top: -15px;
+  margin-bottom: 35px;
+}
+@media screen and (max-width: 640px) {
+  .blog-header {
+    min-height: 22px;
+    margin-bottom: 15px;
+  }
 }
 
 .add-post-container {
@@ -1154,7 +1162,6 @@ body {
 .tags-container {
   z-index: 10;
   margin-top: 0;
-  margin-bottom: 35px;
   margin-left: 100px;
   text-align: right;
 }
